# X1-Thorn

./: .gitignore  README.md
1_Code/1_Data_Analysis/2_Tests_Motor/: EDF_System_Identification.m  Simulacio_Motor.slx  Simulink_Simulation.slxc  Thrust_Motor_Characterization.m  Thrust_Vectoring_Motor_Characterization.asv  Thrust_Vectoring_Motor_Characterization.m
1_Code/1_Data_Analysis/2_Tests_Motor/3S/: motor_characterization_results_nou_setup.csv  motor_characterization_results_simetria_sense_moures.csv  motor_characterization_results_simetria_sense_moures_v2.csv  test_stand_results_characterization_1_11_04V.csv  test_stand_results_characterization_1_11_04V_v2.csv  test_stand_results_characterization_1_11_04V_v3.csv  test_stand_results_characterization_1_11_04V_v4.csv  test_stand_results_characterization_servo_3S.csv  test_stand_results_characterization_servo_3S_v2.csv  test_stand_results_step_1200pwm_11_78V.csv  test_stand_results_step_1400pwm_11_78V.csv
1_Code/1_Data_Analysis/2_Tests_Motor/4S/: test_stand_results_characterization_Thrust_4S_2000pwm_1.csv  test_stand_results_characterization_Thrust_4S_2000pwm_2.csv  test_stand_results_characterization_servo_4S.csv  test_stand_results_characterization_servo_4S_1600pwm.csv  test_stand_results_characterization_servo_4S_1700pwm.csv  test_stand_results_characterization_servo_4S_1800pwm.csv  test_stand_results_characterization_servo_4S_v2.csv  test_stand_results_characterization_servo_4S_v3.csv
1_Code/2_Pi/0_Backups/01_12_2024/ros2_ws/src/thorn_drivers/: CMakeLists.txt
1_Code/3_STM32/0_workspace/.metadata/: .log4j2.xml  version.ini
1_Code/3_STM32/0_workspace/07-ADC_Test/: .cproject  .mxproject  07-ADC_Test Debug.launch  (+1 more)
1_Code/4_ESP32/Ground_Control_Commands/: Ground_Control_Commands.ino
1_Code/5_Control/2_PID/: PID_Tuning.slx  Simulink_Simulation.slxc
(+1119 files in other folders)
